--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.httpclient-4.5.5.jar-1=D:\\Document\\library\\httpclient-4.5.5.ja
 file.reference.httpcore-4.4.9.jar-1=D:\\Document\\library\\httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Document\\library\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Document\\library\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=D:\\Document\\library\\javax.mail.jar
 file.reference.mail.jar-1=D:\\Document\\library\\mail.jar
 file.reference.mysql-connector-j-8.1.0.jar=D:\\Document\\library\\mysql-connector-j-8.1.0.jar
 includes=**
@@ -56,7 +57,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.mail.jar-1}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
