--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,14 +1,14 @@
 deploy.ant.properties.file=C:\\Users\\DMX\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-file.reference.activation.jar-1=C:\\Users\\DMX\\Downloads\\activation.jar
-file.reference.commons-logging-1.2.jar-1=C:\\Users\\DMX\\Downloads\\AccessGoogle-lib\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar-1=C:\\Users\\DMX\\Downloads\\AccessGoogle-lib\\fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar-1=C:\\Users\\DMX\\Downloads\\AccessGoogle-lib\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar-1=C:\\Users\\DMX\\Downloads\\AccessGoogle-lib\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar-1=C:\\Users\\DMX\\Downloads\\AccessGoogle-lib\\httpcore-4.4.9.jar
+file.reference.activation.jar-1=C:\\Users\\DMX\\Downloads\\lib\\activation.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\DMX\\Downloads\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar-1=C:\\Users\\DMX\\Downloads\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar-1=C:\\Users\\DMX\\Downloads\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar-1=C:\\Users\\DMX\\Downloads\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar-1=C:\\Users\\DMX\\Downloads\\lib\\httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\DMX\\Downloads\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\DMX\\Downloads\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mail.jar-1=C:\\Users\\DMX\\Downloads\\mail.jar
-file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\DMX\\Downloads\\mysql-connector-j-8.0.33.jar
+file.reference.mail.jar-1=C:\\Users\\DMX\\Downloads\\lib\\mail.jar
+file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\DMX\\Downloads\\lib\\mysql-connector-j-8.0.33.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
