--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -37,7 +43,6 @@ file.reference.httpcore-4.4.9.jar-1=D:\\Document\\library\\httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Document\\library\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Document\\library\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar=D:\\Document\\library\\javax.mail.jar
-file.reference.mail.jar-1=D:\\Document\\library\\mail.jar
 file.reference.mysql-connector-j-8.1.0.jar=D:\\Document\\library\\mysql-connector-j-8.1.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -56,7 +61,6 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.9.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mail.jar-1}:\
     ${file.reference.mysql-connector-j-8.1.0.jar}:\
     ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
