--- a/vanThinh/QuizNew1/nbproject/project.properties
+++ b/vanThinh/QuizNew1/nbproject/project.properties
@@ -36,7 +36,7 @@ file.reference.httpclient-4.5.5.jar-1=C:\\Users\\acer\\Downloads\\lib-20230927T1
 file.reference.httpcore-4.4.9.jar-1=C:\\Users\\acer\\Downloads\\lib-20230927T110244Z-001\\lib\\httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\acer\\Downloads\\lib-20230927T110244Z-001\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\acer\\Downloads\\lib-20230927T110244Z-001\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mail.jar-1=C:\\Users\\acer\\Downloads\\lib-20230927T110244Z-001\\lib\\mail.jar
+file.reference.javax.mail.jar=C:\\Users\\acer\\Downloads\\lib-20230927T110244Z-001\\javax.mail.jar
 file.reference.mysql-connector-j-8.0.33.jar-1=C:\\Users\\acer\\Downloads\\lib-20230927T110244Z-001\\lib\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
@@ -55,8 +55,8 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.9.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mail.jar-1}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar-1}
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
