--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /SWP391-thinh/SWP391-dungnt/nbproject/private/
 /SWP391-thinh/SWP391-vanthinh/nbproject/private/
 /SWP391-vanthinh/build/
+/SWP391-vanthinh/nbproject/private/
