--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -36,8 +42,8 @@ file.reference.httpclient-4.5.5.jar=D:\\Boring\\Documents\\NetBeansProjects\\Jav
 file.reference.httpcore-4.4.9.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\javax.mail.jar
-file.reference.mysql-connector-j-8.0.33.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\mysql-connector-j-8.0.33.jar
+file.reference.javax.mail.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\javax.mail.jar
+file.reference.mysql-connector-j-8.0.33.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -55,8 +61,8 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.9.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
