--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,7 +3,7 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
-<!--    <servlet>
+    <!--    <servlet>
         <description>
         </description>
         <display-name>hidden</display-name>
@@ -66,6 +66,42 @@
         <servlet-name>pageNotFound</servlet-name>
         <servlet-class>Controller.pageNotFound</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>lecturerHomepage</servlet-name>
+        <servlet-class>Controller.lecturerHomepage</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>lecturerClasslist</servlet-name>
+        <servlet-class>Controller.lecturerClasslist</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>lecturerExamList</servlet-name>
+        <servlet-class>Controller.lecturerExamList</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>lecturerExamDetail</servlet-name>
+        <servlet-class>Controller.lecturerExamDetail</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>studentExamList</servlet-name>
+        <servlet-class>Controller.studentExamList</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>studentExamDetail</servlet-name>
+        <servlet-class>Controller.studentExamDetail</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>viewProfileFromList</servlet-name>
+        <servlet-class>Controller.viewProfileFromList</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>adminEditAccount</servlet-name>
+        <servlet-class>Controller.adminEditAccount</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>adminDeleteAccount</servlet-name>
+        <servlet-class>Controller.adminDeleteAccount</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -121,6 +157,42 @@
     <servlet-mapping>
         <servlet-name>pageNotFound</servlet-name>
         <url-pattern>/pageNotFound</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>lecturerHomepage</servlet-name>
+        <url-pattern>/lecturer</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>lecturerClasslist</servlet-name>
+        <url-pattern>/lecturerClasslist</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>lecturerExamList</servlet-name>
+        <url-pattern>/lecturerExamList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>lecturerExamDetail</servlet-name>
+        <url-pattern>/lecturerExamDetail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>studentExamList</servlet-name>
+        <url-pattern>/studentExamList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>studentExamDetail</servlet-name>
+        <url-pattern>/studentExamDetail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>viewProfileFromList</servlet-name>
+        <url-pattern>/viewProfileFromList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>adminEditAccount</servlet-name>
+        <url-pattern>/adminEditAccount</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>adminDeleteAccount</servlet-name>
+        <url-pattern>/adminDeleteAccount</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
