--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,16 +34,16 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.activation.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\activation.jar
-file.reference.commons-logging-1.2.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\javax.mail.jar
-file.reference.mysql-connector-j-8.0.33.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\mysql-connector-j-8.0.33.jar
+file.reference.activation.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/activation.jar
+file.reference.commons-logging-1.2.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/javax.mail.jar
+file.reference.mysql-connector-j-8.0.33.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -104,6 +104,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=QuizNew.war
+war.name=QuizNew-Adminonly.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
