--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,16 +34,16 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.activation.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/activation.jar
-file.reference.commons-logging-1.2.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/javax.mail.jar
-file.reference.mysql-connector-j-8.0.33.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/mysql-connector-j-8.0.33.jar
+file.reference.activation.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\activation.jar
+file.reference.commons-logging-1.2.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=D:\\Downloads\\lib-20230927T110244Z-001\\javax.mail.jar
+file.reference.mysql-connector-j-8.0.33.jar=D:\\Downloads\\lib-20230927T110244Z-001\\lib\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,6 +53,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.activation.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.fluent-hc-4.5.5.jar}:\
@@ -61,7 +62,6 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.9.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
