update flag va progress

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -104,6 +104,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=QuizAC.war
+war.name=QuizNamThanh30-10.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
