--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="QuizNamThanh30-10" default="default" basedir=".">
-    <description>Builds, tests, and runs the project QuizNamThanh30-10.</description>
+<project name="Quiz11-01" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Quiz11-01.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
