--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,7 @@ file.reference.httpclient-4.5.5.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/
 file.reference.httpcore-4.4.9.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/javax.mail.jar
+file.reference.javax.mail.jar=../../../NetBeansProjects/JavaWeb/Lib/lib/javax.mail.jar
 file.reference.mysql-connector-j-8.0.33.jar-1=../../../NetBeansProjects/JavaWeb/Lib/lib/mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
@@ -61,7 +61,7 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.9.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
-    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -104,6 +104,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=QuizNamThanh30-10.war
+war.name=Quiz11-02.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
