--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,16 +34,21 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.activation.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\activation.jar
-file.reference.commons-logging-1.2.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\javax.mail.jar
-file.reference.mysql-connector-j-8.0.33.jar=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\mysql-connector-j-8.0.33.jar
+file.reference.activation.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\activation.jar
+file.reference.commons-collections4-4.1.jar=lib+sql/commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\javax.mail.jar
+file.reference.mysql-connector-j-8.0.33.jar-1=D:\\Boring\\Documents\\NetBeansProjects\\JavaWeb\\Lib\\lib\\mysql-connector-j-8.0.33.jar
+file.reference.poi-3.17.jar=lib+sql/poi-3.17.jar
+file.reference.poi-ooxml-3.17.jar=lib+sql/poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=lib+sql/poi-ooxml-schemas-3.17.jar
+file.reference.xmlbeans-2.6.0.jar=lib+sql/xmlbeans-2.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,16 +58,21 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.activation.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.fluent-hc-4.5.5.jar}:\
-    ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.httpclient-4.5.5.jar}:\
-    ${file.reference.httpcore-4.4.9.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.fluent-hc-4.5.5.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.httpclient-4.5.5.jar-1}:\
+    ${file.reference.httpcore-4.4.9.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -104,6 +114,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Quiz11-01.war
+war.name=QuizExcel4.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
